assets/css/style.css
/* ... */
.newsletter__header {
  text-align: center;
}

/* Social Links */

.social-links {
  display: flex;
  justify-content: center;
  margin-bottom: var(--spacing-md);
}

.social-link {
  margin-right: 24px;
  color: var(--color-neutral-200);
  font-size: 24px;
  transition: color 0.3s ease-in-out;
}

.social-link:hover {
  color: var(--color-primary-400);
}

.social-link:last-child {
  margin-right: 0;
}

/* Secondary Links */

.secondary-links {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.secondary-links li::after {
  content: "\00B7";
  margin: 0 8px;
  color: var(--color-link-light);
}

.secondary-links li:last-child::after {
  content: none;
}

.secondary-links li a {
  font-size: 14px;
}

/* Copyright */

.copyright {
  display: flex;
  justify-content: center;
  padding: 16px 36px;
  color: var(--color-text-light);
}

.copyright p {
  margin: 0;
}

/**
 * #5.0 Pages
 */

/* #5.1 Home */

.home-hero {
  padding: 64px 24px 36px 24px;
}

.home-webinar {
  padding: 96px 24px;
}
.home-webinar__future {
  padding-bottom: 36px;
  display: flex;
  flex-direction: column-reverse;
}
.home-webinar__change {
}
.home-webinar__icons {
  padding-top: 36px;
  padding-bottom: 36px;
}
.home-webinar__cta {
  display: flex;
  justify-content: center;
}

.home-ready {
  padding: 36px 24px;
}

.home-hero__image,
.home-about__image,
.home-webinar__future__image,
.home-webinar__change__image {
  margin-bottom: 32px;
}

.home-about {
  display: flex;
  flex-direction: column-reverse;
  padding: 96px 24px;
}

.home-ready {
  padding: 36px 24px 124px 24px;
}

.home-ready__content {
  text-align: center;
}

/* Webinar */

.webinar-hero,
.webinar-agenda,
.webinar-host,
.webinar-faq,
.webinar-testimonials,
.webinar-form {
  padding: 36px 24px;
}

/* About */

.about-hero,
.about-alex,
.about-vision,
.about-transformation {
  padding: 36px 24px;
}

/* Contact */

.contact-hero,
.contact-form {
  padding: 36px 24px;
}

/**
 * #6.0 Components
 */

/**
 * #6.1 Buttons
 */

.buttons {
  display: flex;
  gap: 16px;
}
.button {
  display: inline-block;
  padding: 12px 24px;
  border: none;
  border-radius: 8px;
  font-size: 16px;
  font-weight: normal;
}
.button--primary {
  background-color: var(--color-primary-600);
  color: white;
  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
}
.button--primary:hover {
  background-color: var(--color-primary-800);
  color: var(--color-primary-50);
}
.button--outline-light {
  padding: 10px 22px;
  background-color: transparent;
  border: 2px solid white;
  color: white;
  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
}
.button--outline-light:hover {
  background-color: var(--color-primary-600);
  color: white;
}
.button--secondary {
  background-color: var(--color-secondary-600);
  color: white;
  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out;
}
.button--secondary:hover {
  background-color: var(--color-secondary-800);
  color: white;
}
.button--margin {
  margin-bottom: 32px;
}

/* Custom Icons */

.icon-text {
  display: flex;
  align-items: center;
  flex-direction: column;
  text-align: center;
  padding: 14px;
}
.icon-text__icon {
  display: block;
  width: 140px;
  height: 140px;
  background: var(--color-primary-400);
}
.icon-text--negative {
  -webkit-mask: url("../images/mindset-negative-icon.svg") no-repeat center;
  mask: url("../images/mindset-negative-icon.svg") no-repeat center;
}
.icon-text--positive {
  -webkit-mask: url("../images/mindset-positive-icon.svg") no-repeat center;
  mask: url("../images/mindset-positive-icon.svg") no-repeat center;
}
.icon-text--goals {
  -webkit-mask: url("../images/mindset-goals-icon.svg") no-repeat center;
  mask: url("../images/mindset-goals-icon.svg") no-repeat center;
}
.icon-text--responsibility {
  -webkit-mask: url("../images/mindset-responsibility-icon.svg") no-repeat
    center;
  mask: url("../images/mindset-responsibility-icon.svg") no-repeat center;
}

/* Image Masks */

.image-mask-1 img {
  object-fit: cover;
  mask-image: url("../images/mask-01.svg");
  -webkit-mask-image: url("../images/mask-01.svg");
  mask-repeat: no-repeat round;
  -webkit-mask-repeat: no-repeat round;
  mask-size: contain;
  -webkit-mask-size: contain;
}
.image-mask-2 img {
  object-fit: cover;
  mask-image: url("../images/mask-02.svg");
  -webkit-mask-image: url("../images/mask-02.svg");
  mask-repeat: no-repeat round;
  -webkit-mask-repeat: no-repeat round;
  mask-size: contain;
  -webkit-mask-size: contain;
}
.image-mask-3 img {
  object-fit: cover;
  mask-image: url("../images/mask-03.svg");
  -webkit-mask-image: url("../images/mask-03.svg");
  mask-repeat: no-repeat round;
  -webkit-mask-repeat: no-repeat round;
  mask-size: contain;
  -webkit-mask-size: contain;
}
.image-mask-4 img {
  object-fit: cover;
  mask-image: url("../images/mask-04.svg");
  -webkit-mask-image: url("../images/mask-04.svg");
  mask-repeat: no-repeat round;
  -webkit-mask-repeat: no-repeat round;
  mask-size: contain;
  -webkit-mask-size: contain;
}

/* Dividers */

.divider {
  line-height: 0;
}
.divider--invert {
  transform: scaleY(-1);
}
.divider--lighter-to-base {
  background: var(--color-neutral-100);
  fill: var(--color-neutral-50);
}
.divider--light-to-lighter {
  background: var(--color-neutral-200);
  fill: var(--color-neutral-100);
}

/** 
* #10.0 - Media min 576px 
*/

@media all and (min-width: 576px) {
  /**
  * #12.0 Pages
  */

  /* Home */

  .home-webinar__icons {
    display: grid;
    grid-template-columns: 1fr 1fr;
    gap: var(--grid-gap);
  }
}
/* ... */

